# SutraPulse

./: .gitignore  README.md  hardhat.config.ts
sutrapulse/backend/go/: .env.bak  README.md  env.example  package-lock.json  package.json  setup.sh  start.sh
sutrapulse/backend/go/src/: server.js
sutrapulse/backend/go/src/middleware/: auth.js  errorHandler.js  requestLogger.js
sutrapulse/backend/go/src/routes/: ai.js  auth.js  health.js  identity.js  storage.js  wallet.js
sutrapulse/backend/rust/userop_generator/: .gitignore  Cargo.toml  README.md  config.example.json
sutrapulse/backend/rust/userop_generator/src/: cache.rs  config.rs  contracts.rs  error.rs  gas.rs  lib.rs  main.rs  metrics.rs  retry.rs  userop.rs
sutrapulse/backend/rust/userop_generator/src/chain/: arbitrum.rs  ethereum.rs  mod.rs  polygon.rs
sutrapulse/contracts/evm/: README.md  hardhat.config.ts  package-lock.json  package.json
sutrapulse/contracts/evm/contracts/: EntryPoint.sol  Paymaster.sol  SmartWallet.sol  SmartWalletFactory.sol
sutrapulse/contracts/evm/deploy/: 01_deploy_entry_point.ts  02_deploy_paymaster.ts  03_deploy_wallet_factory.ts
sutrapulse/contracts/evm/test/: AccountAbstraction.test.ts  SmartWalletFeatures.test.ts
