[package]
name = "userop_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
dotenv = "0.15"
moka = { version = "0.11", features = ["future"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
dashmap = "5.5"
tokio-retry = "0.3"
